tests/baselines/reference/YieldExpression10_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts(1,11): error TS9001: 'generators' are not currently supported.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression10_es6.ts (1 errors) ====
    var v = { * foo() {
              ~
!!! error TS9001: 'generators' are not currently supported.
        yield(foo);
      }
    }
    